# PikaEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/scenes/: test.scene
cmake/: FetchGUI.cmake  FetchLua.cmake  KylieOptions.cmake  PikaOptions.cmake
cmake/toolchains/: emscripten.cmake
docs/: architecture.md  build.md  contributing.md  engine_architecture.md  getting_started.md  roadmap.md
editor/: CMakeLists.txt
editor/src/: EditorApp.cpp  EditorApp.h  main.cpp
editor/ui/: EditorUI.cpp  EditorUI.h
editor/ui/panels/: AssetsPanel.cpp  AssetsPanel.h  ConsolePanel.cpp  ConsolePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  ScenePanel.cpp  ScenePanel.h  ViewportPanel.cpp  ViewportPanel.h
engine/: CMakeLists.txt
engine/ai/: AIStub.cpp  AIStub.h
engine/core/: Engine.cpp  Engine.h  EngineApp.cpp  EngineApp.h  main.cpp
engine/dimensions/: Dimensions.h
engine/ecs/: Component.h  Entity.h  Registry.h  System.h
engine/include/kylie/: Engine.hpp  Module.hpp  NodeGraph.hpp  Scripting.hpp
engine/include/pika/: Engine.hpp  EngineApp.hpp  Module.hpp  NodeGraph.hpp  Scripting.hpp
engine/plugins/: IPlugin.h  PluginManager.cpp  PluginManager.h
engine/renderer/: Renderer.cpp  Renderer.h  Window.cpp
engine/sandbox/: SandboxApp.cpp  SandboxScene.cpp  SandboxScene.h
engine/scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/scripting/: PythonBridge.cpp  PythonBridge.h  ScriptSystem.cpp  ScriptSystem.h
engine/src/: Engine.cpp  Module.cpp  NodeGraph.cpp  Scripting.cpp
engine/visual_scripting/: Graph.cpp  Graph.h
engine/window/: Window.cpp  Window.h
examples/: CMakeLists.txt
examples/empty/: CMakeLists.txt  main.cpp
examples/fps/: CMakeLists.txt  main.cpp
examples/minimal/: CMakeLists.txt  main.cpp
examples/platformer2d/: CMakeLists.txt  main.cpp
launcher/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/sample_plugin/: CMakeLists.txt  Plugin.cpp
