cmake_minimum_required(VERSION 3.20)
project(KylieEngine LANGUAGES CXX)

set(KYLIE_OUTPUT_ROOT "${CMAKE_SOURCE_DIR}/build")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${KYLIE_OUTPUT_ROOT}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${KYLIE_OUTPUT_ROOT}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${KYLIE_OUTPUT_ROOT}/bin")
foreach(_cfg Debug Release RelWithDebInfo MinSizeRel)
    string(TOUPPER "${_cfg}" _ucfg)
    set("CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${_ucfg}" "${KYLIE_OUTPUT_ROOT}/lib")
    set("CMAKE_LIBRARY_OUTPUT_DIRECTORY_${_ucfg}" "${KYLIE_OUTPUT_ROOT}/lib")
    set("CMAKE_RUNTIME_OUTPUT_DIRECTORY_${_ucfg}" "${KYLIE_OUTPUT_ROOT}/bin")
endforeach()

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(KylieOptions)

include(FetchContent)

if(KYLIE_ENABLE_RENDERER OR BUILD_EDITOR OR BUILD_SANDBOX OR BUILD_LAUNCHER)
    include(FetchGUI)
endif()

if(KYLIE_ENABLE_LUA)
    include(FetchLua)
endif()

add_subdirectory(engine)

if(BUILD_EDITOR)
    add_subdirectory(editor)
endif()

if(BUILD_PLUGINS)
    add_subdirectory(plugins)
endif()

if(BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()

if(BUILD_SANDBOX)
    add_executable(kylie_sandbox engine/sandbox/SandboxApp.cpp)
    target_link_libraries(kylie_sandbox PRIVATE KylieEngine)
    if(TARGET imgui)
        target_link_libraries(kylie_sandbox PRIVATE imgui)
    endif()
    if(TARGET glfw)
        target_link_libraries(kylie_sandbox PRIVATE glfw)
    endif()
    if(TARGET glad)
        target_link_libraries(kylie_sandbox PRIVATE glad)
    endif()
    target_compile_features(kylie_sandbox PRIVATE cxx_std_20)
    if(KYLIE_STRICT_WARNINGS)
        if(MSVC)
            target_compile_options(kylie_sandbox PRIVATE /W4 /permissive-)
        else()
            target_compile_options(kylie_sandbox PRIVATE -Wall -Wextra -Wpedantic -Werror)
        endif()
    endif()
endif()

if(BUILD_LAUNCHER)
    add_subdirectory(launcher)
endif()

enable_testing()
